--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,7 +5,7 @@ GENERAL STYLES
 body {
 	width: 100%;
 	color: $black;
-	background-color: $black;
+	background-color: $white;
 	font-family: $body-font;
 	-webkit-font-smoothing: antialiased;
 	font-feature-settings: "liga", "kern";
