--- a/src/lib/styles/base/_framework.scss
+++ b/src/lib/styles/base/_framework.scss
@@ -3,6 +3,8 @@
 $margin: 50px;
 
 :root {
+  --navbar-height: 70px;
+  --padding: 20px;
   --margin-left: calc(#{$margin} * 0.5);
   --margin-right: calc(#{$margin} * 0.5);
 
